<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="proif.annoyingalarm.ActivityAnnoying">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wake_up"
        android:textColor="#004D40"
        android:id="@+id/labelWakeUp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_info"
        android:textSize="15sp"
        android:textColor="#212121"
        android:id="@+id/textViewInfo"
        android:layout_below="@+id/labelWakeUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30sp" />

    <EditText
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTimes"
        android:text="100"
        android:textAlignment="center"
        android:layout_below="@+id/textViewInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_times"
        android:textSize="15sp"
        android:textColor="#212121"
        android:gravity="center"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/editTextTimes"
        android:layout_toRightOf="@+id/editTextTimes"
        android:layout_toEndOf="@+id/editTextTimes"
        android:layout_alignTop="@+id/editTextTimes"
        android:layout_marginLeft="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:id="@+id/buttonClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_done"
        android:id="@+id/buttonDone"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clicked_info"
        android:textSize="18sp"
        android:id="@+id/infoTextView"
        android:layout_below="@+id/editTextTimes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
